--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+vendor/
+.env
+config/packages/doctrine.yaml
+var/cache
+var/logs
