--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ vendor/
 config/packages/doctrine.yaml
 var/cache
 var/logs
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+yarn.lock
+node_modules
+.yarn
+.yarn
