--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "knplabs/knp-paginator-bundle": "^5.0",
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
@@ -14,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "dompdf/dompdf": "^2.0",
+        "easycorp/easyadmin-bundle": "^4.6",
         "fakerphp/faker": "^1.21",
         "knplabs/knp-paginator-bundle": "^6.1",
         "nelmio/cors-bundle": "^2.2",
@@ -49,7 +49,8 @@
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.1"
     },
     "config": {
         "allow-plugins": {
