--- a/composer.json
+++ b/composer.json
@@ -48,9 +48,11 @@
         "symfony/web-link": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
+        "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^2.1"
+        "vich/uploader-bundle": "^2.1",
+      "ext-http": "*"
     },
     "config": {
         "allow-plugins": {
