--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -1,3 +1,3 @@
 dashboard:
   path: /admin
-  controller: App\Controller\Admin\DashboardController::index
+  controller: App\Controller\Admin\AdminDashboardController::index
